src/pages/es/v1.17.0/sdk/start.mdx
---
title: "SDK de JavaScript - método 'start'"
metaTitle: "SDK de JavaScript - método 'start'"
metaDescription: "Detalles sobre el método 'start' del SDK de OpenReplay"
---

Este método se utiliza para iniciar el tracker. Al iniciar el tracker, comienza la grabación de la sesión.

## Firma

```js
start(startOpts?: Partial<StartOptions>): Promise<StartPromiseReturn>
```

### Parámetros
El método `start` acepta un parámetro opcional con el que puedes personalizar diferentes aspectos de la grabación:
- `userID: string`: se utiliza para establecer manualmente el ID de usuario y poder rastrearlo a lo largo de las sesiones. Es un valor de cadena y puede ser cualquier cosa que desees.
- `metadata: Record<string, string>`: establece manualmente valores de metadatos. Consulta la [sección de Metadatos](/installation/metadata/) para obtener más información sobre esta funcionalidad.
- `forceNew: boolean`: se utiliza para forzar una nueva sesión tras recargar la página. Por defecto está establecido en `false`, por lo que después de recargar se mantiene la sesión.
- `sessionHash: string`: se utiliza para sesiones persistentes. Resulta útil si tienes una aplicación multisitio o si tienes que redirigir al usuario fuera y luego de vuelta a tu sitio (como hacia una pasarela de pago).

### Valor de retorno

Una vez iniciado, el método devolverá una promesa con un objeto de información de sesión que contiene:
- `sessionID: string`: Un valor de cadena que representa el ID de la sesión iniciada.
Inicia el tracker (y el proceso de grabación) y luego devuelve una promesa con la información de la sesión (sessionID, sessionHash, userUUID).


