src/pages/es/v1.18.0/sdk/start.mdx
---
title: "SDK de JavaScript - método 'start'"
metaTitle: "SDK de JavaScript - método 'start'"
metaDescription: "Detalles sobre el método 'start' del SDK de OpenReplay"
---

Este método se utiliza para iniciar el tracker. Al iniciar el tracker, comienza la grabación de la sesión.

## Firma

```js
start(startOpts?: Partial<StartOptions>): Promise<StartPromiseReturn>
```

### Parámetros
El método `start` acepta un parámetro opcional con el que puedes personalizar diferentes aspectos de la grabación:
- `userID: string`: se utiliza para establecer manualmente el ID de usuario y rastrearlo a lo largo de las sesiones. Es un valor de tipo string y puede ser lo que quieras.
- `metadata: Record<string, string>`: establece manualmente los valores de metadatos. Consulta la [sección de Metadatos](/installation/metadata/) para obtener más información sobre esta función.
- `forceNew: boolean`: se utiliza para forzar una nueva sesión tras recargar la página. De forma predeterminada está establecido en `false`, por lo que tras una recarga se mantiene la sesión.
- `sessionHash: string`: se utiliza para sesiones persistentes (sticky). Es útil si tienes una aplicación multisitio o si tienes que redirigir al usuario fuera y luego de vuelta a tu sitio (como a una pasarela de pago).
- `assistOnly: boolean`: inicia el tracker en modo solo asistencia (assist-only), que omitirá el envío de los datos de la sesión al backend (función de la edición EE)

### Valor de retorno

Una vez iniciado, el método devolverá una promesa con un objeto de información de sesión que contiene:
- `sessionID: string`: un valor de tipo string que representa el ID de la sesión iniciada.
Inicia el tracker (y el proceso de grabación) y luego devuelve una promesa con la información de la sesión (sessionID, sessionHash, userUUID).


